<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Question_3"
    android:background="@color/bg_ACtivity"
    >

    <View
        android:id="@+id/viewQuestion3"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:background="@color/bg_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/labelQuestion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question 3 :"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/cartoonist_hand"
        app:layout_constraintTop_toTopOf="@id/viewQuestion3"
        app:layout_constraintLeft_toLeftOf="@id/viewQuestion3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelQuestion3"
        android:text="@string/question3"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/cartoonist_hand"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="@id/viewQuestion3"
        app:layout_constraintRight_toRightOf="@id/viewQuestion3"
        />

    <Button
        android:id="@+id/chooseQuestion3A"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:backgroundTint="@color/bg_button"
        android:layout_marginTop="100dp"
        android:text="@string/chooseQuestion3A"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewQuestion3"
        />

    <Button
        android:id="@+id/chooseQuestion3B"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bg_button"
        android:text="@string/chooseQuestion3B"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseQuestion3A"
        />

    <Button
        android:id="@+id/chooseQuestion3C"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bg_button"
        android:text="@string/chooseQuestion3C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseQuestion3B"
        />


</androidx.constraintlayout.widget.ConstraintLayout>